// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AA setup flow renders sidebar when authenticated on /progress 1`] = `
<div>
  <div
    class="sc-bdVaJa bsPuXO"
  >
    <div
      class="bp3-callout sc-kkGfuU jfrnYf"
    >
      <div
        class="sc-bwzfXH iqXUnX"
      >
        <div
          class="text"
        >
          <h4
            class="bp3-heading"
          >
            The audit has not started.
          </h4>
          <p>
            Audit setup is complete.
          </p>
          <p>
            0 of 2 jurisdictions have completed file uploads.
          </p>
          <span
            class="bp3-tag sc-eqIVtm cEclbE"
          >
            <span
              class="bp3-text-overflow-ellipsis bp3-fill"
            >
              Will refresh in 5 minutes
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-bwzfXH iqXUnX"
    >
      <div
        class="sc-bxivhb jyZAjn"
      >
        <h2
          class="bp3-heading sc-htpNat fysvnw"
        >
          Audit Progress
        </h2>
        <ul
          class="bp3-menu"
        >
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-active bp3-intent-primary bp3-popover-dismiss"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Jurisdictions
              </div>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="sc-jhAzac jVSfxT"
      >
        <h2
          class="bp3-heading sc-htpNat fysvnw"
        >
          Audit Progress by Jurisdiction
        </h2>
        <p>
          Click on a column name to sort by that column's data. To reverse sort, click on the column name again.
          <br />
           To view a single jurisdiction's data, click the name of the jurisdiction.
        </p>
        <div
          class="sc-fBuWsC kOQtkb"
        >
          <label
            class="bp3-control bp3-switch"
          >
            <input
              checked=""
              type="checkbox"
            />
            <span
              class="bp3-control-indicator"
            />
            Count unique sampled ballots
          </label>
          <div
            class="bp3-input-group .modifier"
          >
            <span
              class="bp3-icon bp3-icon-filter"
            />
            <input
              class="bp3-input"
              placeholder="Filter by jurisdiction name..."
              type="text"
              value=""
            />
          </div>
        </div>
        <table
          class="sc-hzDkRC jWaxCC"
          role="table"
        >
          <thead>
            <tr>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Jurisdiction"
              >
                <span
                  style="margin-right: 3px;"
                >
                  Jurisdiction
                </span>
                <span>
                  <span
                    class="bp3-icon bp3-icon-double-caret-vertical"
                    icon="double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        double-caret-vertical
                      </desc>
                      <path
                        d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Status"
              >
                <span
                  style="margin-right: 3px;"
                >
                  Status
                </span>
                <span>
                  <span
                    class="bp3-icon bp3-icon-double-caret-vertical"
                    icon="double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        double-caret-vertical
                      </desc>
                      <path
                        d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Total in Manifest"
              >
                <span
                  style="margin-right: 3px;"
                >
                  Total in Manifest
                </span>
                <span>
                  <span
                    class="bp3-icon bp3-icon-double-caret-vertical"
                    icon="double-caret-vertical"
                  >
                    <svg
                      data-icon="double-caret-vertical"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        double-caret-vertical
                      </desc>
                      <path
                        d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                <button
                  class="bp3-button bp3-minimal bp3-small bp3-intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Jurisdiction One
                  </span>
                </button>
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-interactive bp3-minimal sc-csuQGl ggzkQ"
                  tabindex="0"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    No manifest uploaded
                  </span>
                </span>
              </td>
              <td
                role="cell"
              >
                
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                <button
                  class="bp3-button bp3-minimal bp3-small bp3-intent-primary"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Jurisdiction Two
                  </span>
                </button>
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-interactive bp3-minimal sc-csuQGl ggzkQ"
                  tabindex="0"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    No manifest uploaded
                  </span>
                </span>
              </td>
              <td
                role="cell"
              >
                
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`AA setup flow renders sidebar when authenticated on /setup 1`] = `
<div>
  <div
    class="sc-bdVaJa bsPuXO"
  >
    <div
      class="bp3-callout sc-kkGfuU jfrnYf"
    >
      <div
        class="sc-bwzfXH iqXUnX"
      >
        <div
          class="text"
        >
          <h4
            class="bp3-heading"
          >
            The audit has not started.
          </h4>
          <p>
            Audit setup is complete.
          </p>
          <p>
            0 of 2 jurisdictions have completed file uploads.
          </p>
          <span
            class="bp3-tag sc-eqIVtm cEclbE"
          >
            <span
              class="bp3-text-overflow-ellipsis bp3-fill"
            >
              Will refresh in 5 minutes
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-bwzfXH iqXUnX"
    >
      <div
        class="sc-bxivhb jyZAjn"
      >
        <h2
          class="bp3-heading sc-htpNat fysvnw"
        >
          Audit Setup
        </h2>
        <ul
          class="bp3-menu"
        >
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-active bp3-intent-primary bp3-popover-dismiss"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Participants
              </div>
            </a>
          </li>
          <li
            class="bp3-menu-divider"
          />
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-disabled"
              tabindex="-1"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Target Contests
              </div>
              <span
                class="bp3-menu-item-label"
              >
                <div
                  class="bp3-spinner"
                >
                  <div
                    class="bp3-spinner-animation"
                  >
                    <svg
                      height="20"
                      stroke-width="16.00"
                      viewBox="-3.00 -3.00 106.00 106.00"
                      width="20"
                    >
                      <path
                        class="bp3-spinner-track"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      />
                      <path
                        class="bp3-spinner-head"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        pathLength="280"
                        stroke-dasharray="280 280"
                        stroke-dashoffset="210"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </a>
          </li>
          <li
            class="bp3-menu-divider"
          />
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-disabled"
              tabindex="-1"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Opportunistic Contests
              </div>
              <span
                class="bp3-menu-item-label"
              >
                <div
                  class="bp3-spinner"
                >
                  <div
                    class="bp3-spinner-animation"
                  >
                    <svg
                      height="20"
                      stroke-width="16.00"
                      viewBox="-3.00 -3.00 106.00 106.00"
                      width="20"
                    >
                      <path
                        class="bp3-spinner-track"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                      />
                      <path
                        class="bp3-spinner-head"
                        d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                        pathLength="280"
                        stroke-dasharray="280 280"
                        stroke-dashoffset="210"
                      />
                    </svg>
                  </div>
                </div>
              </span>
            </a>
          </li>
          <li
            class="bp3-menu-divider"
          />
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-popover-dismiss"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audit Settings
              </div>
            </a>
          </li>
          <li
            class="bp3-menu-divider"
          />
          <li
            class=""
          >
            <a
              class="bp3-menu-item bp3-popover-dismiss"
            >
              <div
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Review & Launch
              </div>
            </a>
          </li>
        </ul>
      </div>
      <form
        data-testid="form-one"
      >
        <div
          class="sc-ifAKCX dOqzfM"
        >
          <h2
            class="bp3-heading sc-htpNat fysvnw"
          >
            Participants
          </h2>
          <label
            for="state"
          >
            Choose your state from the options below
            <br />
            <div
              class="bp3-html-select sc-VigVT jXUwyP"
            >
              <select
                data-testid="state-field"
                field="[object Object]"
                form="[object Object]"
                id="state"
              >
                <option
                  value=""
                />
                <option
                  label="Alabama"
                  value="AL"
                >
                  Alabama
                </option>
                <option
                  label="Alaska"
                  value="AK"
                >
                  Alaska
                </option>
                <option
                  label="Arizona"
                  value="AZ"
                >
                  Arizona
                </option>
                <option
                  label="Arkansas"
                  value="AR"
                >
                  Arkansas
                </option>
                <option
                  label="California"
                  value="CA"
                >
                  California
                </option>
                <option
                  label="Colorado"
                  value="CO"
                >
                  Colorado
                </option>
                <option
                  label="Connecticut"
                  value="CT"
                >
                  Connecticut
                </option>
                <option
                  label="Delaware"
                  value="DE"
                >
                  Delaware
                </option>
                <option
                  label="District Of Columbia"
                  value="DC"
                >
                  District Of Columbia
                </option>
                <option
                  label="Florida"
                  value="FL"
                >
                  Florida
                </option>
                <option
                  label="Georgia"
                  value="GA"
                >
                  Georgia
                </option>
                <option
                  label="Hawaii"
                  value="HI"
                >
                  Hawaii
                </option>
                <option
                  label="Idaho"
                  value="ID"
                >
                  Idaho
                </option>
                <option
                  label="Illinois"
                  value="IL"
                >
                  Illinois
                </option>
                <option
                  label="Indiana"
                  value="IN"
                >
                  Indiana
                </option>
                <option
                  label="Iowa"
                  value="IA"
                >
                  Iowa
                </option>
                <option
                  label="Kansas"
                  value="KS"
                >
                  Kansas
                </option>
                <option
                  label="Kentucky"
                  value="KY"
                >
                  Kentucky
                </option>
                <option
                  label="Louisiana"
                  value="LA"
                >
                  Louisiana
                </option>
                <option
                  label="Maine"
                  value="ME"
                >
                  Maine
                </option>
                <option
                  label="Maryland"
                  value="MD"
                >
                  Maryland
                </option>
                <option
                  label="Massachusetts"
                  value="MA"
                >
                  Massachusetts
                </option>
                <option
                  label="Michigan"
                  value="MI"
                >
                  Michigan
                </option>
                <option
                  label="Minnesota"
                  value="MN"
                >
                  Minnesota
                </option>
                <option
                  label="Mississippi"
                  value="MS"
                >
                  Mississippi
                </option>
                <option
                  label="Missouri"
                  value="MO"
                >
                  Missouri
                </option>
                <option
                  label="Montana"
                  value="MT"
                >
                  Montana
                </option>
                <option
                  label="Nebraska"
                  value="NE"
                >
                  Nebraska
                </option>
                <option
                  label="Nevada"
                  value="NV"
                >
                  Nevada
                </option>
                <option
                  label="New Hampshire"
                  value="NH"
                >
                  New Hampshire
                </option>
                <option
                  label="New Jersey"
                  value="NJ"
                >
                  New Jersey
                </option>
                <option
                  label="New Mexico"
                  value="NM"
                >
                  New Mexico
                </option>
                <option
                  label="New York"
                  value="NY"
                >
                  New York
                </option>
                <option
                  label="North Carolina"
                  value="NC"
                >
                  North Carolina
                </option>
                <option
                  label="North Dakota"
                  value="ND"
                >
                  North Dakota
                </option>
                <option
                  label="Ohio"
                  value="OH"
                >
                  Ohio
                </option>
                <option
                  label="Oklahoma"
                  value="OK"
                >
                  Oklahoma
                </option>
                <option
                  label="Oregon"
                  value="OR"
                >
                  Oregon
                </option>
                <option
                  label="Pennsylvania"
                  value="PA"
                >
                  Pennsylvania
                </option>
                <option
                  label="Rhode Island"
                  value="RI"
                >
                  Rhode Island
                </option>
                <option
                  label="South Carolina"
                  value="SC"
                >
                  South Carolina
                </option>
                <option
                  label="South Dakota"
                  value="SD"
                >
                  South Dakota
                </option>
                <option
                  label="Tennessee"
                  value="TN"
                >
                  Tennessee
                </option>
                <option
                  label="Texas"
                  value="TX"
                >
                  Texas
                </option>
                <option
                  label="Utah"
                  value="UT"
                >
                  Utah
                </option>
                <option
                  label="Vermont"
                  value="VT"
                >
                  Vermont
                </option>
                <option
                  label="Virginia"
                  value="VA"
                >
                  Virginia
                </option>
                <option
                  label="Washington"
                  value="WA"
                >
                  Washington
                </option>
                <option
                  label="West Virginia"
                  value="WV"
                >
                  West Virginia
                </option>
                <option
                  label="Wisconsin"
                  value="WI"
                >
                  Wisconsin
                </option>
                <option
                  label="Wyoming"
                  value="WY"
                >
                  Wyoming
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <div
              class="sc-gZMcBi bmHNeb"
            >
              Click "Browse" to choose the appropriate file from your computer. This file should be a comma-separated list of all the jurisdictions participating in the audit, plus email addresses for audit administrators in each participating jurisdiction.
              <br />
              <br />
              <a
                href="/sample_jurisdiction_filesheet.csv"
                rel="noopener noreferrer"
                target="_blank"
              >
                (Click here to view a sample file in the correct format.)
              </a>
            </div>
          </div>
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <span>
              file name
               
            </span>
            <button
              class="bp3-button sc-htoDjs dESvso"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Replace File
              </span>
            </button>
          </div>
        </div>
        <div
          class="sc-EHOje kPsGPf"
        >
          <button
            class="bp3-button bp3-intent-primary sc-htoDjs dESvso"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save & Next
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`JA setup renders initial state 1`] = `
<div>
  <div
    class="sc-bdVaJa bsPuXO"
  >
    <div
      class="bp3-callout sc-kkGfuU jfrnYf"
    >
      <div
        class="sc-bwzfXH iqXUnX"
      >
        <div
          class="text"
        >
          <h4
            class="bp3-heading"
          >
            The audit has not started.
          </h4>
          <p>
            Ballot manifest not uploaded.
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bwzfXH sc-dVhcbM jpYGJw"
    >
      <h2
        class="bp3-heading sc-htpNat fysvnw"
      >
        Audit Source Data
      </h2>
      <form>
        <div
          class="sc-ifAKCX dOqzfM"
        >
          <h2
            class="bp3-heading sc-htpNat fysvnw"
          />
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <h4
              class="bp3-heading"
            >
              Ballot Manifest
            </h4>
            <div
              class="sc-gZMcBi bmHNeb"
            >
              Click "Browse" to choose the appropriate Ballot Manifest file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many ballot cards (individual pieces of paper) are stored in each container.
              <br />
              <br />
              <a
                href="/sample_ballot_manifest.csv"
                rel="noopener noreferrer"
                target="_blank"
              >
                (Click here to view a sample file in the correct format.)
              </a>
            </div>
          </div>
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <label
              class="bp3-file-input"
            >
              <input
                accept=".csv"
                name="csv"
                type="file"
              />
              <span
                class="bp3-file-upload-input"
              >
                Select a CSV...
              </span>
            </label>
          </div>
          <div>
            <button
              class="bp3-button bp3-intent-primary sc-htoDjs dESvso"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Upload File
              </span>
            </button>
          </div>
        </div>
      </form>
      <form>
        <div
          class="sc-ifAKCX dOqzfM"
        >
          <h2
            class="bp3-heading sc-htpNat fysvnw"
          />
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <h4
              class="bp3-heading"
            >
              Candidate Totals by Batch
            </h4>
            <div
              class="sc-gZMcBi bmHNeb"
            >
              Click "Browse" to choose the appropriate Candidate Totals by Batch file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many votes were counted for each candidate in each of those containers.
              <br />
              <br />
              <a
                href="/sample_candidate_totals_by_batch.csv"
                rel="noopener noreferrer"
                target="_blank"
              >
                (Click here to view a sample file in the correct format.)
              </a>
            </div>
          </div>
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <label
              class="bp3-file-input bp3-disabled"
            >
              <input
                accept=".csv"
                disabled=""
                name="csv"
                type="file"
              />
              <span
                class="bp3-file-upload-input"
              >
                Select a CSV...
              </span>
            </label>
          </div>
          <div>
            <button
              class="bp3-button bp3-disabled bp3-intent-primary sc-htoDjs dESvso"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Upload File
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`JA setup submits ballot manifest 1`] = `
<div>
  <div
    class="sc-bdVaJa bsPuXO"
  >
    <div
      class="bp3-callout sc-kkGfuU jfrnYf"
    >
      <div
        class="sc-bwzfXH iqXUnX"
      >
        <div
          class="text"
        >
          <h4
            class="bp3-heading"
          >
            The audit has not started.
          </h4>
          <p>
            Ballot manifest uploaded.
          </p>
          <p>
            Waiting for Audit Administrator to launch audit.
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bwzfXH sc-dVhcbM jpYGJw"
    >
      <h2
        class="bp3-heading sc-htpNat fysvnw"
      >
        Audit Source Data
      </h2>
      <form>
        <div
          class="sc-ifAKCX dOqzfM"
        >
          <h2
            class="bp3-heading sc-htpNat fysvnw"
          />
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <h4
              class="bp3-heading"
            >
              Ballot Manifest
            </h4>
            <div
              class="sc-gZMcBi bmHNeb"
            >
              Click "Browse" to choose the appropriate Ballot Manifest file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many ballot cards (individual pieces of paper) are stored in each container.
              <br />
              <br />
              <a
                href="/sample_ballot_manifest.csv"
                rel="noopener noreferrer"
                target="_blank"
              >
                (Click here to view a sample file in the correct format.)
              </a>
            </div>
          </div>
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <p>
              <strong>
                Current file:
              </strong>
               
              manifest.csv
            </p>
          </div>
          <div>
            <button
              class="bp3-button sc-htoDjs dESvso"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Replace File
              </span>
            </button>
            <button
              class="bp3-button sc-htoDjs dESvso"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Delete File
              </span>
            </button>
          </div>
        </div>
      </form>
      <form>
        <div
          class="sc-ifAKCX dOqzfM"
        >
          <h2
            class="bp3-heading sc-htpNat fysvnw"
          />
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <h4
              class="bp3-heading"
            >
              Candidate Totals by Batch
            </h4>
            <div
              class="sc-gZMcBi bmHNeb"
            >
              Click "Browse" to choose the appropriate Candidate Totals by Batch file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many votes were counted for each candidate in each of those containers.
              <br />
              <br />
              <a
                href="/sample_candidate_totals_by_batch.csv"
                rel="noopener noreferrer"
                target="_blank"
              >
                (Click here to view a sample file in the correct format.)
              </a>
            </div>
          </div>
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <label
              class="bp3-file-input"
            >
              <input
                accept=".csv"
                name="csv"
                type="file"
              />
              <span
                class="bp3-file-upload-input"
              >
                Select a CSV...
              </span>
            </label>
          </div>
          <div>
            <button
              class="bp3-button bp3-intent-primary sc-htoDjs dESvso"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Upload File
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`JA setup submits batch tallies 1`] = `
<div>
  <div
    class="sc-bdVaJa bsPuXO"
  >
    <div
      class="bp3-callout sc-kkGfuU jfrnYf"
    >
      <div
        class="sc-bwzfXH iqXUnX"
      >
        <div
          class="text"
        >
          <h4
            class="bp3-heading"
          >
            The audit has not started.
          </h4>
          <p>
            Ballot manifest uploaded.
          </p>
          <p>
            Waiting for Audit Administrator to launch audit.
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bwzfXH sc-dVhcbM jpYGJw"
    >
      <h2
        class="bp3-heading sc-htpNat fysvnw"
      >
        Audit Source Data
      </h2>
      <form>
        <div
          class="sc-ifAKCX dOqzfM"
        >
          <h2
            class="bp3-heading sc-htpNat fysvnw"
          />
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <h4
              class="bp3-heading"
            >
              Ballot Manifest
            </h4>
            <div
              class="sc-gZMcBi bmHNeb"
            >
              Click "Browse" to choose the appropriate Ballot Manifest file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many ballot cards (individual pieces of paper) are stored in each container.
              <br />
              <br />
              <a
                href="/sample_ballot_manifest.csv"
                rel="noopener noreferrer"
                target="_blank"
              >
                (Click here to view a sample file in the correct format.)
              </a>
            </div>
          </div>
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <p>
              <strong>
                Current file:
              </strong>
               
              manifest.csv
            </p>
          </div>
          <div>
            <button
              class="bp3-button sc-htoDjs dESvso"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Replace File
              </span>
            </button>
            <button
              class="bp3-button sc-htoDjs dESvso"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Delete File
              </span>
            </button>
          </div>
        </div>
      </form>
      <form>
        <div
          class="sc-ifAKCX dOqzfM"
        >
          <h2
            class="bp3-heading sc-htpNat fysvnw"
          />
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <h4
              class="bp3-heading"
            >
              Candidate Totals by Batch
            </h4>
            <div
              class="sc-gZMcBi bmHNeb"
            >
              Click "Browse" to choose the appropriate Candidate Totals by Batch file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many votes were counted for each candidate in each of those containers.
              <br />
              <br />
              <a
                href="/sample_candidate_totals_by_batch.csv"
                rel="noopener noreferrer"
                target="_blank"
              >
                (Click here to view a sample file in the correct format.)
              </a>
            </div>
          </div>
          <div
            class="sc-iwsKbI iGsFgr"
          >
            <p>
              <strong>
                Current file:
              </strong>
               
              tallies.csv
            </p>
          </div>
          <div>
            <button
              class="bp3-button sc-htoDjs dESvso"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Replace File
              </span>
            </button>
            <button
              class="bp3-button sc-htoDjs dESvso"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Delete File
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
